Add register, several general components

--- a/public/locales/ru-RU/auth.json
+++ b/public/locales/ru-RU/auth.json
@@ -1,12 +1,20 @@
 {
   "button": {
-    "sign_in": "Войти"
+    "sign_in": "Войти",
+    "sign_out": "Выйти",
+    "sign_up": "Зарегистрироваться"
+  },
+  "header": {
+    "login": "Войдите в свой аккаунт",
+    "register": "Регистрация"
   },
   "label": {
+    "email": "E-Mail",
     "login": "Почта",
-    "password": "Пароль"
-  },
-  "login": {
-    "header": "Войдите в свой аккаунт"
+    "password": "Пароль",
+    "or": "или",
+    "phone": "Номер телефона",
+    "public_name": "Публичное имя",
+    "signed_in_as": "Вы вошли как"
   }
 }
