Register, Dropdown components, error handling

--- a/public/locales/ru-RU/yup.json
+++ b/public/locales/ru-RU/yup.json
@@ -1,6 +1,7 @@
 {
   "custom": {
-    "password": "Минимум 6 символов"
+    "password": "Минимум 6 символов",
+    "phone": "Номер телефона неверный"
   },
   "mixed": {
     "default": "Ошибка",
