--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -5,13 +5,16 @@
       "text": "Произошла непредвиденная ошибка, обновите страницу и попробуйте снова"
     }
   },
+  "navbar": {
+    "videolessons": "Видеоуроки"
+  },
   "topbar": {
     "search_placeholder": "Найти уроки, статьи"
   },
   "video": {
     "drag_drop": {
       "browse": "Загрузите файл",
-      "info": "MOV, AVI, MP4 до 1 Гб",
+      "info": "MOV, AVI, MP4 до 200 Мб",
       "title": "или перетащите видео"
     }
   }
