--- a/public/locales/ru-RU/videolesson.json
+++ b/public/locales/ru-RU/videolesson.json
@@ -2,7 +2,8 @@
   "create": {
     "form": {
       "helper": {
-        "video": "Разместите короткий видеоролик, продолжительностью до 3-х минут"
+        "video": "Разместите видеоролик, продолжительностью не более 10 минут",
+        "video_processing": "Видео обрабатывается. Вы можете разместить видеоурок на сайте"
       },
       "label": {
         "description": "Описание",
