--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -3,7 +3,8 @@
     "generic_error": {
       "title": "Упс :(",
       "text": "Произошла непредвиденная ошибка, обновите страницу и попробуйте снова"
-    }
+    },
+    "save": "Сохранить"
   },
   "navbar": {
     "videolessons": "Видеоуроки"
