--- a/public/locales/ru-RU/auth.json
+++ b/public/locales/ru-RU/auth.json
@@ -1,5 +1,7 @@
 {
   "button": {
+    "profile": "Профиль",
+    "settings": "Настройки",
     "sign_in": "Войти",
     "sign_out": "Выйти",
     "sign_up": "Зарегистрироваться"
