Profile view, GET-12 show videolesson preview

--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -15,7 +15,7 @@
   "video": {
     "drag_drop": {
       "browse": "Загрузите файл",
-      "info": "MOV, AVI, MP4 до 200 Мб",
+      "info": "MOV, AVI, MP4",
       "title": "или перетащите видео"
     }
   }
