New video player with adaptive bitrate streaming

--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "generic_error": {
+      "button": "Обновить",
       "title": "Упс :(",
       "text": "Произошла непредвиденная ошибка, обновите страницу и попробуйте снова"
     },
