--- a/public/locales/ru-RU/videolesson.json
+++ b/public/locales/ru-RU/videolesson.json
@@ -1,4 +1,11 @@
 {
+  "error": {
+    "button": "Повторить",
+    "generic": {
+      "title": "Упс :("
+    },
+    "list": "Не удалось загрузить список видеоуроков"
+  },
   "create": {
     "form": {
       "helper": {
@@ -15,5 +22,8 @@
     "modal": {
       "title": "Разместить видеоурок"
     }
+  },
+  "list": {
+    "title": "Видеоуроки"
   }
 }
