Infinite loading of entities, support pagination, improve list wrappers

--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -5,6 +5,7 @@
       "title": "Упс :(",
       "text": "Произошла непредвиденная ошибка, обновите страницу и попробуйте снова"
     },
+    "load_more": "Загрузить еще",
     "save": "Сохранить"
   },
   "navbar": {
