New Banner component, phone verified notifier

--- a/public/locales/ru-RU/auth.json
+++ b/public/locales/ru-RU/auth.json
@@ -1,4 +1,10 @@
 {
+  "banner": {
+    "phone_not_verified": {
+      "action": "Подтвердить",
+      "message": "Ваш номер телефона не подтвержден"
+    }
+  },
   "button": {
     "profile": "Профиль",
     "settings": "Настройки",
