Improve code quality, add verification code, migrate to new version of Prisma v2.13, integrate SMSC provider

--- a/public/locales/ru-RU/profile.json
+++ b/public/locales/ru-RU/profile.json
@@ -27,14 +27,29 @@
       },
       "subtitle": "Информация в этой форме является общедоступной",
       "title": "Профиль"
+    },
+    "verification": {
+      "phone": {
+        "helper": "Мы совершим дозвон с уникального номера, где шесть последних цифр являются кодом подтверждения. Звонок бесплатный!",
+        "label": {
+          "code": "Код подтверждения",
+          "phone": "Номер телефона"
+        },
+        "send_code": "Отправить код",
+        "send_code_again": "Отправить код повторно через {{seconds}} сек.",
+        "subtitle": "Подтвердите номер телефона, чтобы получить больше возможностей",
+        "title": "Верификация номера телефона"
+      }
     }
   },
   "view": {
-      "contacts_title": "Контактная информация"
+    "contacts_title": "Контактная информация"
   },
   "nav": {
     "account": "Аккаунт",
     "contacts": "Контакты",
+    "security": "Безопасность",
+    "verification": "Верификация",
     "videolessons": "Видеоуроки"
   }
 }
