New color palette, verify code function

--- a/public/locales/ru-RU/profile.json
+++ b/public/locales/ru-RU/profile.json
@@ -30,7 +30,10 @@
     },
     "verification": {
       "phone": {
-        "helper": "Мы совершим дозвон с уникального номера, где шесть последних цифр являются кодом подтверждения. Звонок бесплатный!",
+        "done": {
+          "heading": "Номер телефона подтвержден"
+        },
+        "helper": "Мы совершим дозвон с уникального номера, где четыре последние цифры являются кодом подтверждения. Звонок бесплатный!",
         "label": {
           "code": "Код подтверждения",
           "phone": "Номер телефона"
