--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -6,6 +6,10 @@
       "text": "Произошла непредвиденная ошибка, обновите страницу и попробуйте снова"
     },
     "load_more": "Загрузить еще",
+    "lock": {
+      "close": "Закрыть",
+      "heading": "Услуга недоступна"
+    },
     "save": "Сохранить"
   },
   "navbar": {
