--- a/public/locales/ru-RU/videolesson.json
+++ b/public/locales/ru-RU/videolesson.json
@@ -25,5 +25,12 @@
   },
   "list": {
     "title": "Видеоуроки"
+  },
+  "lock": {
+    "publish_videolesson": {
+      "action": "Подтвердить",
+      "heading": "Разместить видеоурок",
+      "hint": "Подтвердите свой номер телефона, чтобы размещать видеоуроки."
+    }
   }
 }
