Prepare for new verifications

--- a/public/locales/ru-RU/auth.json
+++ b/public/locales/ru-RU/auth.json
@@ -6,6 +6,7 @@
     }
   },
   "button": {
+    "forgot_password": "Забыли пароль?",
     "profile": "Профиль",
     "settings": "Настройки",
     "sign_in": "Войти",
