Forgot password feature

--- a/public/locales/ru-RU/app.json
+++ b/public/locales/ru-RU/app.json
@@ -1,4 +1,9 @@
 {
+  "code": {
+    "phone": {
+      "helper": "Мы совершим дозвон с уникального номера, где четыре последние цифры являются кодом подтверждения. Звонок бесплатный!"
+    }
+  },
   "common": {
     "generic_error": {
       "button": "Обновить",
@@ -10,10 +15,20 @@
       "close": "Закрыть",
       "heading": "Услуга недоступна"
     },
-    "save": "Сохранить"
+    "save": "Сохранить",
+    "steps": {
+      "label": {
+        "step_number": "Шаг {{step}}"
+      }
+    }
   },
   "navbar": {
     "videolessons": "Видеоуроки"
+  },
+  "notification": {
+    "type": {
+      "error": "Ошибка"
+    }
   },
   "topbar": {
     "search_placeholder": "Найти уроки, статьи"
