--- a/public/locales/ru-RU/auth.json
+++ b/public/locales/ru-RU/auth.json
@@ -13,6 +13,40 @@
     "sign_out": "Выйти",
     "sign_up": "Зарегистрироваться"
   },
+  "forgot_password": {
+    "change": {
+      "header": "Сменить пароль",
+      "form": {
+        "label": {
+          "password": "Новый пароль"
+        },
+        "submit_button": "Сменить"
+      },
+      "success": {
+        "title": "Пароль изменен",
+        "text": "Войдите на сайт с помощью нового пароля"
+      }
+    },
+    "request": {
+      "header": "Запросить код",
+      "form": {
+        "label": {
+          "phone": "Номер телефона"
+        },
+        "send_button": "Отправить"
+      }
+    },
+    "title": "Забыли пароль?",
+    "verify": {
+      "header": "Подтвердить код",
+      "form": {
+        "label": {
+          "code": "Код подтверждения"
+        },
+        "verify_button": "Подтвердить"
+      }
+    }
+  },
   "header": {
     "login": "Войдите в свой аккаунт",
     "register": "Регистрация"
