--- a/public/locales/ru-RU/videolesson.json
+++ b/public/locales/ru-RU/videolesson.json
@@ -16,7 +16,11 @@
         "description": "Описание",
         "name": "Название",
         "publish": "Разместить",
+        "skills": "Навыки",
         "video": "Видео"
+      },
+      "placeholder": {
+        "description": "Вы можете указать навыки, которые видеоурок развивает с помощью хештега"
       }
     },
     "modal": {
