Ideas for S3 and own media processor service Move to Cloudflare for videos Use video assets in database

--- a/public/locales/ru-RU/auth.json
+++ b/public/locales/ru-RU/auth.json
@@ -53,7 +53,7 @@
   },
   "label": {
     "email": "E-Mail",
-    "login": "Почта",
+    "login": "Номер телефона",
     "password": "Пароль",
     "or": "или",
     "phone": "Номер телефона",
